2009-06-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	refactored code and added support for webdav sync spec.

2009-06-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/inverse-library/sogoWebDAV.js: modified to
	convert a result set returned as XML to a javascript structure of
	objects.

2009-06-10  Francis Lachapelle  <flachapelle@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: fixed the
	telephone attribute mapping.

2009-06-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js:
	restored the ability to synchronize addressbook while the
	selection is currently in the results pane (right list).

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	refactored the code and added support for ctag-based synchronisation.

	* chrome/content/sogo-connector/general/preference.service.addressbook.groupdav.js:
	added methods for saving and retrieving the ctag of ab collections.

	* chrome/content/sogo-connector/general/implementors.addressbook.groupdav.js:
	removed obsolete module.

2009-04-06  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Bumped version number to 0.93

2009-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	reset the status of pending connections if an error occurs during
	a collection operation.

2009-03-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js
	(deleteManager): we invoke "deleteDirectory" after
	deletedSelectedCards, to ensure the list is deleted properly.

2009-03-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: properly
	decode fields with base64 encoding.
	Work-around a bug of qp encoders which fold lines without escaping
	their crlf.
